Finalized CRUD API definitions on Swagger
