# packages/backend/src/api/controllers/note.js
@@ -5,25 +5,28 @@ import { Data } from '../../data';
 export async function getNotes(req: any, res: any) {
   const { userId } = req.swagger.params;
   dbConnection.find({ uid: userId }, (err, data) => {
-    if (err) return res.json({ success: false, error: err });
+    if (err) return res.json({ result: false, error: err });
     return res.json(data);
   });
 }
 
 export async function updateNote(req: any, res: any) {
-  const { id, update } = req.body;
+  const { id, message } = req.body;
   const { userId } = req.swagger.params;
-  dbConnection.findOneAndUpdate({ _id: id, uid: userId }, update, (err) => {
-    if (err) return res.json({ success: false, error: err });
-    return res.json({ success: true });
+  console.log(id);
+  console.log(message);
+  console.log(userId);
+  dbConnection.findOneAndUpdate({ _id: id, uid: userId }, { message }, (err) => {
+    if (err) return res.json({ result: false, error: err });
+    return res.json({ result: true });
   });
 }
 export async function deleteNote(req: any, res: any) {
-  const { id } = req.body;
+  const noteId = req.swagger.params.noteId.value;
   const { userId } = req.swagger.params;
-  dbConnection.findOneAndDelete({ _id: id, uid: userId }, (err) => {
+  dbConnection.findOneAndDelete({ _id: noteId, uid: userId }, (err) => {
     if (err) return res.send(err);
-    return res.json({ success: true });
+    return res.json({ result: true });
   });
 }
 export async function addNote(req: any, res: any) {
@@ -33,14 +36,14 @@ export async function addNote(req: any, res: any) {
 
   if (!message) {
     return res.json({
-      success: false,
+      result: false,
       error: 'INVALID INPUTS',
     });
   }
   data.message = message;
   data.uid = userId;
   data.save((err) => {
-    if (err) return res.json({ success: false, error: err });
-    return res.json({ success: true });
+    if (err) return res.json({ result: false, error: err });
+    return res.json({ result: true });
   });
 }
